--- a/fcc_sms_text_classification.ipynb
+++ b/fcc_sms_text_classification.ipynb
@@ -27,15 +27,6 @@
     },
     {
       "cell_type": "code",
-      "source": [],
-      "metadata": {
-        "id": "P5o0d5TQeVfv"
-      },
-      "execution_count": null,
-      "outputs": []
-    },
-    {
-      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "lMHwYXHXCar3"
@@ -68,6 +59,77 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "import re\n",
+        "\n",
+        "def clean_text(text):\n",
+        "    text = text.lower()\n",
+        "    text = re.sub(r'\\d+', '', text)              # remove numbers\n",
+        "    text = re.sub(r'[^\\w\\s]', '', text)          # remove punctuation\n",
+        "    text = re.sub(r'\\s+', ' ', text).strip()     # remove extra whitespace\n",
+        "    return text\n",
+        "\n",
+        "train_df['message'] = train_df['message'].apply(clean_text)\n",
+        "test_df['message'] = test_df['message'].apply(clean_text)\n"
+      ],
+      "metadata": {
+        "id": "c3ADMXQbfXV3"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Tokenization and padding\n",
+        "from tensorflow.keras.preprocessing.text import Tokenizer\n",
+        "from tensorflow.keras.preprocessing.sequence import pad_sequences\n",
+        "import numpy as np\n",
+        "\n",
+        "tokenizer = Tokenizer(oov_token=\"<OOV>\")\n",
+        "tokenizer.fit_on_texts(train_df['message'])\n",
+        "\n",
+        "maxlen = 120\n",
+        "\n",
+        "X_train = pad_sequences(tokenizer.texts_to_sequences(train_df['message']), maxlen=maxlen)\n",
+        "X_test = pad_sequences(tokenizer.texts_to_sequences(test_df['message']), maxlen=maxlen)\n",
+        "\n",
+        "y_train = np.array(train_df['label'])\n",
+        "y_test = np.array(test_df['label'])\n"
+      ],
+      "metadata": {
+        "id": "pYw6T3OHeusX"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "# Build and train the model\n",
+        "from tensorflow.keras.models import Sequential\n",
+        "from tensorflow.keras.layers import Embedding, GlobalAveragePooling1D, Dense\n",
+        "\n",
+        "vocab_size = len(tokenizer.word_index) + 1\n",
+        "\n",
+        "model = Sequential([\n",
+        "    Embedding(vocab_size, 16, input_length=maxlen),\n",
+        "    GlobalAveragePooling1D(),\n",
+        "    Dense(24, activation='relu'),\n",
+        "    Dense(1, activation='sigmoid')\n",
+        "])\n",
+        "\n",
+        "model.compile(loss='binary_crossentropy', optimizer='adam', metrics=['accuracy'])\n",
+        "model.fit(X_train, y_train, epochs=20, validation_data=(X_test, y_test), verbose=2)\n"
+      ],
+      "metadata": {
+        "id": "174kEMRWexQc"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
       "execution_count": null,
       "metadata": {
         "id": "J9tD9yACG6M9"
@@ -78,20 +140,10 @@
         "# (should return list containing prediction and label, ex. [0.008318834938108921, 'ham'])\n",
         "def predict_message(pred_text):\n",
         "  seq = tokenizer.texts_to_sequences([pred_text])\n",
-        "\n",
-        "\n",
         "  padded = pad_sequences(seq, maxlen=120)\n",
-        "\n",
-        "\n",
         "  prob = model.predict(padded)[0][0]\n",
-        "\n",
-        "  #label\n",
         "  label = \"spam\" if prob > 0.5 else \"ham\"\n",
-        "\n",
-        "  return [float(prob), label]\n",
-        "\n",
-        "\n",
-        "\n",
+        "  prediction = [float(prob), label]\n",
         "  return (prediction)\n",
         "\n",
         "pred_text = \"how are you doing today?\"\n",
